# farzana

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ecosystem.config.cjs  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
deploy/: Caddyfile  README.md  caddy.service  farzana.service  finish-after-dns.ps1  redeploy.ps1  remote-setup.sh  user-data.sh
deploy/terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
docs/: ARCHITECTURE.md  INSPIRATION.md  MOTIVATION.md  OPENCLAW_HERMES.md  README.md  ROADMAP.md  RULES.md  SETUP.md  STACK.md  STORY.md  VISION_LISTEN_AND_PC.md
scripts/: set_webhook.py
src/farzana/: __init__.py  __main__.py  cli.py  main.py
src/farzana/api/: __init__.py  deps.py  router.py
src/farzana/api/routes/: admin.py  health.py  telegram.py
src/farzana/core/: __init__.py  config.py  logging.py  security.py
src/farzana/pc_reader/: README.md  __init__.py  __main__.py  calendar_ics.py  ingest.py  mail_eml.py  watch.py
src/farzana/services/: __init__.py  capture.py  dialogue.py  extract.py  intent.py  listen.py  proactive.py  scheduler.py  stt.py  telegram.py  tts.py  vault.py
src/farzana/workers/: celery_app.py  tasks.py
vault/config/: identity.md  preferences.md
